tests/type-errors/entrysig_invalid_self_entry.arl
archetype entrysig_invalid_self_entry

variable res : int = 0

entry otherentry(i : int) {
  res := i;
}

entry exec () {
  var e : entrysig<string> = self.an_entry;
  transfer 0tz to entry e("str");
}
